# educational_modules_TB2

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app_education/: models.py  serializers.py  tests.py  urls.py  views.py
app_education/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
users/: models.py  serializers.py  services.py  tasks.py  tests.py
users/migrations/: 0001_initial.py
